[package]
name = "witchy"
version = "0.0.1"
authors = ["Mario Schroeder <spindizzy@outlook.com>"]

[dependencies]
find_folder = "0.3.0"
piston = "0.37.0"
piston2d-sprite = "0.40.0"
piston-ai_behavior = "0.22.0"

piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"

