[package]
name = "witchy"
version = "0.0.1"
authors = ["Mario Schroeder <spindizzy@outlook.com>"]

[dependencies]
find_folder = "0.3.0"
piston = "0.49.0"
piston2d-sprite = "0.59.0"
piston-ai_behavior = "0.31.0"


piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"