[package]
name = "witchy"
version = "0.0.2"
authors = ["Mario Schroeder <spindizzy@outlook.com>"]
edition = '2015'

[dependencies]
find_folder = "0.3.0"
piston = "0.52.1"
piston2d-sprite = "0.63.0"
piston-ai_behavior = "0.32.0"
piston-music = "0.26.0"

piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68"
piston2d-opengl_graphics = "0.76.0"